# rainbow6-map-server

./: .gitignore  r6-maps.cabal
src/: Main.hs
static/css/: default.css
