name:                r6-maps
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/org-serve#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable r6-maps
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , wai-middleware-static
                     , wai-extra
                     , wai
                     , transformers
                     , filepath
                     , directory
                     , split
                     , safe
                     , lucid
                     , text
                     , mtl
